crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__multi-language.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng",
    "spa"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng",
          "spa"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;06.",
        "corpus": "corpus",
        "language": [
          "eng",
          "spa"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng",
          "spa"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Multi-language file with utterance-level [- lang] switching",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "and word-level @s markers",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: language_code, language_switching, @s markers",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "want",
              "content": [
                {
                  "content": "want",
                  "type": "text"
                }
              ],
              "raw_text": "want",
              "type": "word"
            },
            {
              "cleaned_text": "agua",
              "content": [
                {
                  "content": "agua",
                  "type": "text"
                }
              ],
              "lang": {
                "code": "spa",
                "type": "explicit"
              },
              "raw_text": "agua@s:spa",
              "type": "word"
            },
            {
              "cleaned_text": "please",
              "content": [
                {
                  "content": "please",
                  "type": "text"
                }
              ],
              "raw_text": "please",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "dame",
              "content": [
                {
                  "content": "dame",
                  "type": "text"
                }
              ],
              "raw_text": "dame",
              "type": "word"
            },
            {
              "cleaned_text": "la",
              "content": [
                {
                  "content": "la",
                  "type": "text"
                }
              ],
              "raw_text": "la",
              "type": "word"
            },
            {
              "cleaned_text": "leche",
              "content": [
                {
                  "content": "leche",
                  "type": "text"
                }
              ],
              "raw_text": "leche",
              "type": "word"
            }
          ],
          "language_code": "spa",
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "mira",
              "content": [
                {
                  "content": "mira",
                  "type": "text"
                }
              ],
              "lang": {
                "code": "spa",
                "type": "explicit"
              },
              "raw_text": "mira@s:spa",
              "type": "word"
            },
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "perro",
              "content": [
                {
                  "content": "perro",
                  "type": "text"
                }
              ],
              "lang": {
                "code": "spa",
                "type": "explicit"
              },
              "raw_text": "perro@s:spa",
              "type": "word"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "type": "word"
            },
            {
              "cleaned_text": "running",
              "content": [
                {
                  "content": "running",
                  "type": "text"
                }
              ],
              "raw_text": "running",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "yes",
              "content": [
                {
                  "content": "yes",
                  "type": "text"
                }
              ],
              "raw_text": "yes",
              "type": "word"
            },
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "dog",
              "content": [
                {
                  "content": "dog",
                  "type": "text"
                }
              ],
              "raw_text": "dog",
              "type": "word"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "type": "word"
            },
            {
              "cleaned_text": "running",
              "content": [
                {
                  "content": "running",
                  "type": "text"
                }
              ],
              "raw_text": "running",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "quiero",
              "content": [
                {
                  "content": "quiero",
                  "type": "text"
                }
              ],
              "raw_text": "quiero",
              "type": "word"
            },
            {
              "cleaned_text": "galletas",
              "content": [
                {
                  "content": "galletas",
                  "type": "text"
                }
              ],
              "raw_text": "galletas",
              "type": "word"
            }
          ],
          "language_code": "spa",
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "you",
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "type": "word"
            },
            {
              "cleaned_text": "want",
              "content": [
                {
                  "content": "want",
                  "type": "text"
                }
              ],
              "raw_text": "want",
              "type": "word"
            },
            {
              "cleaned_text": "cookies",
              "content": [
                {
                  "content": "cookies",
                  "type": "text"
                }
              ],
              "lang": {
                "code": "eng",
                "type": "explicit"
              },
              "raw_text": "cookies@s:eng",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;06.",
        "corpus": "corpus",
        "language": [
          "eng",
          "spa"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng",
          "spa"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
